--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -50,7 +50,7 @@
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
     <AndroidHttpClientHandlerType>Managed</AndroidHttpClientHandlerType>
     <AndroidUseAapt2>false</AndroidUseAapt2>
-    <AndroidLinkSkip>Xamarin.Forms.Material;</AndroidLinkSkip>
+    <AndroidLinkSkip>Xamarin.Forms.Material;FFImageLoading.Forms</AndroidLinkSkip>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
@@ -102,7 +102,7 @@
       <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Refractored.XamForms.PullToRefresh">
-      <Version>2.2.3</Version>
+      <Version>2.4.1.1-beta</Version>
     </PackageReference>
     <PackageReference Include="Splat">
       <Version>6.1.7</Version>
@@ -134,14 +134,14 @@
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.232914-pre6" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>3.6.0.220655</Version>
+      <Version>4.0.0.232914-pre6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Ads.Lite">
       <Version>70.1501.0-preview2</Version>
