--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -49,6 +49,7 @@
     <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
     <AndroidHttpClientHandlerType>Managed</AndroidHttpClientHandlerType>
+    <AndroidLinkSkip>Refractored.XamForms.PullToRefresh.Droid.PullToRefreshLayoutRenderer</AndroidLinkSkip>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
@@ -100,7 +101,7 @@
       <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Refractored.XamForms.PullToRefresh">
-      <Version>2.2.3</Version>
+      <Version>2.4.1.1-beta</Version>
     </PackageReference>
     <PackageReference Include="Splat">
       <Version>6.1.7</Version>
@@ -132,14 +133,20 @@
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.304370-pre8" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material">
+      <Version>4.0.0.304370-pre8</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Ads.Lite">
-      <Version>70.1501.0-preview2</Version>
+      <Version>71.1501.0-preview2</Version>
+    </PackageReference>
+    <PackageReference Include="XF.Material">
+      <Version>1.4.1.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
