--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -13,14 +13,14 @@
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
     <PackageReference Include="Refractored.XamForms.PullToRefresh" Version="2.4.1.1-beta" />
-    <PackageReference Include="Splat" Version="8.0.0-dotnet3-preview.5" />
+    <PackageReference Include="Splat" Version="6.1.7" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.870-pre" />
-    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.870-pre" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.232914-pre6" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.232914-pre6" />
-    <PackageReference Include="Xamarin.HotReload" Version="1.2.2" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.880-pre" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.880-pre" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.304370-pre8" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.304370-pre8" />
+    <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
 
   <ItemGroup>
