--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -5,7 +5,11 @@
     <AssemblyName>SSFR_Movies</AssemblyName>
     <RootNamespace>SSFR_Movies</RootNamespace>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <SolutionDir>..\</SolutionDir>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="ReactiveUI" Version="9.9.5" />
     <PackageReference Include="ReactiveUI.XamForms" Version="9.9.5" />
@@ -18,8 +22,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.880-pre" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.880-pre" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.232914-pre6" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.232914-pre6" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.304370-pre8" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="3.6.0.293080" />
     <PackageReference Include="Xamarin.HotReload" Version="1.2.4" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
