--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -104,7 +104,7 @@
       <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Refractored.XamForms.PullToRefresh">
-      <Version>2.4.1.1-beta</Version>
+      <Version>2.2.2</Version>
     </PackageReference>
     <PackageReference Include="Splat">
       <Version>8.0.0-dotnet3-preview.5</Version>
