--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -14,18 +14,22 @@
     <PackageReference Include="Realm" Version="3.4.0" />
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
     <PackageReference Include="Splat" Version="8.0.0-dotnet3-preview.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.7.938-pre" />
-    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.7.938-pre" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.7.944" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.7.944" />
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.346134-pre9" />
-    <PackageReference Include="Xamarin.HotReload" Version="1.2.4" />
+    <PackageReference Include="Xamarin.HotReload" Version="1.2.7" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Helpers\ParallaxView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ResourceDictionaries\GenResourceDictionary.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
