--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
+    <PackageReference Include="SkiaSharp" Version="1.68.0" />
     <PackageReference Include="Splat" Version="8.0.0-dotnet3-preview.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
