--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.346134-pre9" />
     <PackageReference Include="Xamarin.HotReload" Version="1.2.7" />
+    <PackageReference Include="Xamarin.Plugin.SharedTransitions" Version="1.0.0.1" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
 
