--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="Splat" Version="8.0.0-dotnet3-preview.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.346134-pre9" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.1.383393-nightly" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.1.383393-nightly" />
     <PackageReference Include="Xamarin.HotReload" Version="1.2.9" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
