--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -91,6 +91,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
+    <Reference Include="XGetter">
+      <HintPath>..\..\..\XGetter\XGetter\bin\Debug\XGetter.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="glidex">
@@ -174,7 +177,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CloseBackPress.cs" />
     <Compile Include="Services\ToastAlert.cs" />
-    <Compile Include="Services\XGetter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Proguard.cfg" />
