--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -310,7 +310,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidEnvironment Include="GarbageCollector.config" />
+    <AndroidEnvironment Include="GarbageCollector.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
