--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="XF.Material" Version="1.7.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
+    <PackageReference Include="StructLinq" Version="0.26.1-dependabot-nuge-0001" />
   </ItemGroup>
 
   <ItemGroup>
@@ -76,6 +77,7 @@
     <None Remove="Views\DataTemplateSelectors\" />
     <None Remove="Services\Abstract\" />
     <None Remove="Xamarin.FFImageLoading.Forms" />
+    <None Remove="StructLinq" />
   </ItemGroup>
   <ItemGroup>
     <None Update="App.xaml">
